<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="cam_button">Take A Picture</string>
    <string name="app_name">jSnap</string>
    <string name="image_cd_camera">Images go here</string>
    <string name="hello">Hello World, PhotoIntentActivity!</string>
    <string name="btnIntend">Take (big) Picture</string>
    <string name="btnIntendS">Take (small) Picture</string>
    <string name="btnIntendV">Take Video</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>
    <string name="projectAutoComplete">Start typing a JIRA project name</string>
    <string name="issueAutoComplete">Start typing a JIRA issue name</string>
    <string name="attachButton">Attach Image</string>
    <string name="retakeButton">Open Camera</string>
    <string name="switch_activity">Switch Activity</string>
    <string name="projectsURLString">https://btljira.broadinstitute.org/rest/api/2/project</string>
    <string name="attachExplainProject">
        Start typing a JIRA project.
    </string>
    <string name="attachExplainIssue">
        Start typing a JIRA issue name.
    </string>
</resources>